test: allow pass exclude.tests as system property, increase memory in forks