@@ -21,7 +21,8 @@
         <jetty.version>9.4.44.v20210927</jetty.version>
         <jetty.http.port>8080</jetty.http.port>
         <jetty.stop.port>9999</jetty.stop.port>
-        <maven.failsafe.plugin.version>2.22.1</maven.failsafe.plugin.version>
+        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+        <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
         <maven.resources.plugin.version>3.0.2</maven.resources.plugin.version>
         <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
         <failsafe.forkCount>4</failsafe.forkCount>
@@ -265,6 +266,16 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.plugin.version}</version>
+                    <configuration>
+                        <excludes>
+                            <exclude>${exclude.tests}</exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven.failsafe.plugin.version}</version>
                     <executions>
@@ -277,7 +288,7 @@
                     </executions>
                     <configuration>
                         <forkCount>${failsafe.forkCount}</forkCount>
-                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        <argLine>-Xmx2048m</argLine>
                         <reuseForks>true</reuseForks>
                         <trimStackTrace>false</trimStackTrace>
                         <systemPropertyVariables>
@@ -288,6 +299,9 @@
                             <sauce.sauceAccessKey>${sauce.sauceAccessKey}</sauce.sauceAccessKey>
                             <sauce.options>${sauce.options}</sauce.options>
                         </systemPropertyVariables>
+                        <excludes>
+                            <exclude>${exclude.tests}</exclude>
+                        </excludes>
                     </configuration>
                 </plugin>
                 <plugin>
